@@ -1,3 +1,7 @@
+2004-10-05  Derek Price  <derek@ximbiot.com>
+
+	* regex.m4: Import most recent version from GNULIB.
+
 2004-05-20  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (EXTRA_DIST): Add strftime.m4.
